[package]
name = "rsmatrix"
version = "0.1.2"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
crossterm = "0.27.0"
rand = "0.8.5"
ratatui = "0.26.1"
serde = { version = "1.0.197", optional = true, features = ["derive"] }
ureq = { version = "2.9.6", optional = true, features = ["json"] }

[features]
default = ["twitch"]
twitch = ["dep:serde", "dep:ureq"]

[profile.release]
lto = true
strip = true
