[package]
name = "rsmatrix"
version = "0.1.2"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
crossterm = "0.27.0"
rand = "0.8.5"
ratatui = "0.27.0"
serde = { version = "1.0.203", optional = true, features = ["derive"] }
ureq = { version = "2.9.7", optional = true, features = ["json"] }

[features]
default = ["twitch"]
twitch = ["dep:serde", "dep:ureq"]

[profile.release]
lto = true
strip = true
